Add a dependency on the slack-webhook library.

--- a/teamcity-slack-integration-server/build.gradle
+++ b/teamcity-slack-integration-server/build.gradle
@@ -10,6 +10,7 @@ repositories {
 
 dependencies {
   compile 'com.google.code.gson:gson:1.7.1'
+  compile 'net.gpedro.integrations.slack:slack-webhook:1.2.1'
 }
 
 group = 'com.enlivenhq.teamcity'
