--- a/teamcity-slack-integration-server/pom.xml
+++ b/teamcity-slack-integration-server/pom.xml
@@ -24,5 +24,10 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>net.gpedro.integrations.slack</groupId>
+      <artifactId>slack-webhook</artifactId>
+      <version>1.2.1</version>
+    </dependency>
   </dependencies>
 </project>
