--- a/teamcity-slack-integration-server/build.gradle
+++ b/teamcity-slack-integration-server/build.gradle
@@ -4,6 +4,9 @@ plugins {
   id "com.github.rodm.teamcity-server" version "0.9.1"
 }
 
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
+
 repositories {
   jcenter()
 }
